Fix responsivity on mobile view

--- a/assets/ofl/css/site.css
+++ b/assets/ofl/css/site.css
@@ -130,6 +130,7 @@ body{
     font-family: Sfcompactdisplay, sans-serif; 
 }
 
+
 .page-subtitle-content .item p.footnote{
     font-size: 18px;
     color: #9A9898;
@@ -137,6 +138,7 @@ body{
 }
 .page-subtitle-content .item p{
     font-size: 28px;
+    /* font-size: 1.5em; */
 }
 
 .page-subtitle-content .social ul{
@@ -155,6 +157,29 @@ body{
     font-weight: 600;
 }
 
+
+@media (max-width: 481px) {
+    .page-subtitle h2,
+    .page-subtitle-content{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .page-subtitle-content .item h3{
+        font-size: 18px;
+    }
+    .page-subtitle-content h2{
+        font-size: 28px;
+    }
+
+    .page-subtitle-content .item p{
+        font-size: 24px;
+    }
+
+    .page-subtitle-content .item p.footnote{
+        font-size: 14px;
+    }
+}
 
 @media (max-width: 991px){
     .page-title h2{
@@ -529,6 +554,13 @@ form.contact-form button{
     margin-bottom: 20px;
     width: 100%;
     /* box-shadow: #000 #424242; */
+}
+
+
+@media (max-width: 481px) {
+    form.contact-form .form-control{
+        font-size: 16px;
+    }
 }
 
 .clarification{
